--- a/main.html
+++ b/main.html
@@ -8,8 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <H1>Sample Holiday</H1>
+	<BR>
+	<P>I don't want to go in a Holiday</P>
+	<H3>Top 5 attractions</H3>
+	<OL>
+		<LI><B>Beach</LI>
+		<LI><B>Museum</LI>
+		<LI><B>Zoo</LI>
+		<LI><B>Pub</LI>
+		<LI><B>Fine Dine</LI>
+	</OL>
+	<H3>Must-try foods</H3>
+	<UL>
+		<LI>Pav Bhaji</LI>
+		<LI>Dosa</LI>
+		<LI>Manchurian</LI>
+		<LI>Sandwich</LI>
+		<LI>Shakes</LI>
+	</UL>
 
 </body>
 
