--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	</OL>
 	<H3>Must-try foods</H3>
 	<UL>
-		<LI>Pav Bhaji</LI>
+		<LI><i>Pav Bhaji</LI>
 		<LI>Dosa</LI>
 		<LI>Manchurian</LI>
 		<LI>Sandwich</LI>
